--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-div, header, img, content, section, p, h1, h2, li  {
-    margin: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -27,7 +23,7 @@ div, header, img, content, section, p, h1, h2, li  {
   background-image: url(../images/logo_place_header.svg);
 }
 
-.logo_palace_header{
+.logo_place_header {
   position:absolute;
   top:30px;
   left:64px;
@@ -36,7 +32,8 @@ div, header, img, content, section, p, h1, h2, li  {
 }
 
 
-.header__title{
+.header__title {
+  z-index: 2;
   width: 730px;
   display: flex;
   align-items: center;
@@ -47,6 +44,8 @@ div, header, img, content, section, p, h1, h2, li  {
 }
 
 .header__subtitle{
+  margin: 0;
+  z-index: 2;
   position: absolute;
   left: 64px;
   bottom: 30px;
@@ -96,6 +95,7 @@ div, header, img, content, section, p, h1, h2, li  {
 }
 
 .two-columns__brief{
+  margin: 0;
   width: 175px;
   color: #2f80ed;
   line-height: 1.2em;
@@ -112,10 +112,15 @@ div, header, img, content, section, p, h1, h2, li  {
 }
 
 .two-columns__paragraph{
+  margin: 0;
   font-size:24px;
   line-height:34px;
   margin-bottom:30px;
   font-weight: normal;
+}
+
+.two-columns__paragraph:last-child{
+  margin-bottom: 0px;
 }
 
 .two-columns__span-accent {
@@ -141,7 +146,7 @@ div, header, img, content, section, p, h1, h2, li  {
   font-weight: normal;
   line-height: 34px;
   font-size: 24px;
-  margin: 0 auto 30px;
+  margin: auto;
   width: 60%;
   text-align: center;
 }
@@ -159,6 +164,7 @@ div, header, img, content, section, p, h1, h2, li  {
 }
 
 .table__heading{
+  margin: 0;
   line-height: 1.15em;
   font-size: 24px;
   font-weight: bold;
@@ -168,11 +174,11 @@ div, header, img, content, section, p, h1, h2, li  {
   line-height: 1.2em;
   font-weight: normal;
   font-size: 18px;
-  margin: 20px auto 20px;
+  margin: 20px 0 0;
 }
 
 .feynman{
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position: left bottom;
@@ -220,55 +226,45 @@ div, header, img, content, section, p, h1, h2, li  {
   background-color: #1f1f1f;
 }
 
-.section-title__theme__dark{
+.section-title_theme_dark {
   color: #fff;
-  line-height: 1.15em;
-  font-size: 60px;
-  font-weight: bold;
   padding-top: 90px;
-
 }
 
-.section-subtitle__theme_dark{
+.section-subtitle_theme_dark{
   color: #fff;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  margin: 0 auto;
 }
 
-.table__theme_dark{
+.table_theme_dark{
   margin: 0 auto 90px;
 }
 
 
-.table__cell_dark{
+.table__cell_theme_dark{
   color: #fff;
   width: 200px;
   margin: 80px auto 0px;
   z-index: 2;
 }
 
-.table__heading__dark{
+.table__heading_theme_dark{
+  margin: 0;
   line-height: 1.15em;
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-.kaufman__triangle{
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   position: absolute;
-  top: 0;
   right: -210px;
   width: 877px;
   height: 877px;
-  z-index: 2;
 }
 
-.table__text__dark{
-  line-height: 1.2em;
-  font-size: 18px;
-  font-weight: normal;
+.table__text_theme_dark{
+  margin: 0;
 }
 
 .footer {
@@ -283,15 +279,18 @@ div, header, img, content, section, p, h1, h2, li  {
   display: flex;
   width: 90%;
   justify-content: space-between;
-  min-height: 350px;
+  min-height: 250px;
   margin: auto;
 }
 
-.footer__columns__copyright{
+.footer__column_content_copyright{
   flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.logo_palace_footer{
+.logo_place_footer{
   background-image: url(../images/logo_place_footer.svg);
   background-position:center;
   background-size:contain;
@@ -301,59 +300,47 @@ div, header, img, content, section, p, h1, h2, li  {
 }
 
 .footer__author{
-  position: absolute;
-  bottom: 58px;
+  margin: 18px 0 18px;
   color: #fff;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
 }
 
-.footer__columns__info{
+.footer__columns_content_info{
+}
+
+.footer__columns_content_socials{
 }
 
 .footer__column-heading{
+  margin: 0 auto 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
 }
 
 .footer__column-links{
+  margin: 0 auto 16px;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
   list-style-type: none;
-  padding-inline-start: 0px;
-  margin-block-start: 20px;
-  margin-block-end: 16px;
+  padding-inline-start: 0;
 } 
 
- .footer__social-icon{
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  list-style-type: none;
-  padding-inline-start: 0px;
-  margin-block-start: 20px;
-  margin-block-end: 16px;
+/*.footer__column-link:last-child{
+  margin-bottom: 16px;
+}*/
+
+.footer__social-icons{
+  margin: auto 10px auto 0;
+  width: 16px;
+  height: 16px;
 }
 
- .footer__links{
-  font-size: 16px;
+ .footer__column-link {
   display: flex;
   text-decoration: none;
   color: #fff;
  }
-
- .footer__social-icon__size{
-  margin: auto 0;
-  width: 16px;
-  height: 16px;
- }
-
- .footer__links__padding{
-  padding-left: 10px;
- }
-
-
-
