--- a/styles/style.css
+++ b/styles/style.css
@@ -33,11 +33,12 @@
 
 
 .header__title {
+  margin: 0;
+  margin-left: 64px;
   z-index: 2;
   width: 730px;
   display: flex;
   align-items: center;
-  margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
@@ -56,6 +57,7 @@
 }
 
 .header__link {
+  color: #2f80ed;
   text-decoration: none;
 }
 
@@ -227,6 +229,8 @@
 }
 
 .section-title_theme_dark {
+  position: relative;
+  z-index: 1;
   color: #fff;
   padding-top: 90px;
 }
@@ -257,6 +261,7 @@
 
 .kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
   position: absolute;
   right: -210px;
   width: 877px;
