--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url("../vendor/normalize.css");
-@import url("../blocks/page-root/page.css");
+@import url("../blocks/page-root/page-root.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/logo/logo.css");
 @import url("../blocks/logo/_place/logo_place_header.css");
@@ -10,18 +10,18 @@
 @import url("../blocks/header/__main-illustration/header__main-illustration.css");
 @import url("../blocks/header/__square-pic/header__square-pic.css");
 @import url("../blocks/main/description/description.css");
-@import url("../blocks/main/description/two-columns/two-columns.css");
-@import url("../blocks/main/description/__brief/two-columns__brief.css");
-@import url("../blocks/main/description/__main-text/two-columns__main-text.css");
-@import url("../blocks/main/description/__paragraph/two-columns__paragraph.css");
-@import url("../blocks/main/description/__span-accent/two-columns__span-accent.css");
+@import url("../blocks/two-columns/two-columns.css");
+@import url("../blocks/two-columns/__brief/two-columns__brief.css");
+@import url("../blocks/two-columns/__main-text/two-columns__main-text.css");
+@import url("../blocks/two-columns/__paragraph/two-columns__paragraph.css");
+@import url("../blocks/two-columns/__span-accent/two-columns__span-accent.css");
 @import url("../blocks/main/degits/degits.css");
 @import url("../blocks/section-title/section-title.css");
 @import url("../blocks/section-subtitle/section-subtitle.css");
 @import url("../blocks/table/table.css");
-@import url("../blocks/main/degits/__cell/table__cell.css");
-@import url("../blocks/main/degits/__heading/table__heading.css");
-@import url("../blocks/main/degits/__text/table__text.css");
+@import url("../blocks/table/__cell/table__cell.css");
+@import url("../blocks/table/__heading/table__heading.css");
+@import url("../blocks/table/__text/table__text.css");
 @import url("../blocks/main/feynman/feynman.css");
 @import url("../blocks/main/feynman/__title/feynman__title.css");
 @import url("../blocks/main/feynman/__subtitle/feynman__subtitle.css");
@@ -30,9 +30,9 @@
 @import url("../blocks/section-title/_theme/section-title_theme_dark.css");
 @import url("../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css");
 @import url("../blocks/table/_theme/table_theme_dark.css");
-@import url("../blocks/main/kaufman/__cell/_theme/table__cell_theme_dark.css");
-@import url("../blocks/main/kaufman/__heading/_theme/table__heading_theme_dark.css");
-@import url("../blocks/main/kaufman/__text/_theme/table__text_theme_dark.css");
+@import url("../blocks/table/__cell/_theme/table__cell_theme_dark.css");
+@import url("../blocks/table/__heading/_theme/table__heading_theme_dark.css");
+@import url("../blocks/table/__text/_theme/table__text_theme_dark.css");
 @import url("../blocks/main/kaufman/__triangle/kaufman__triangle.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__columns/footer__columns.css");
@@ -47,11 +47,11 @@
 @import url("../blocks/footer/__social-icons/footer__social-icons.css");
 @import url("../blocks/rotation/rotation.css");
 @import url("../blocks/main/techniques/techniques.css");
-@import url("../blocks/main/techniques/cards/cards.css");
-@import url("../blocks/main/techniques/__item/cards__item.css");
-@import url("../blocks/main/techniques/__image/cards__image.css");
-@import url("../blocks/main/techniques/__title/cards__title.css");
-@import url("../blocks/main/techniques/__description/cards__description.css");
+@import url("../blocks/cards/cards.css");
+@import url("../blocks/cards/__item/cards__item.css");
+@import url("../blocks/cards/__image/cards__image.css");
+@import url("../blocks/cards/__title/cards__title.css");
+@import url("../blocks/cards/__description/cards__description.css");
 @import url("../blocks/main/oakley/oakley.css");
 @import url("../blocks/main/khan/khan.css");
 @import url("../blocks/main/khan/__container/khan__container.css");
